--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
+html {
+  font-family: "Roboto", sans;
+}
 #container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 #img {
@@ -23,4 +27,32 @@
 #form-container,
 #button-container {
   flex: 1;
+  margin: 0 10rem 5rem 3rem;
+}
+
+#hero-text p:nth-child(1n) {
+  padding-top: 8rem;
+}
+
+#hero-text p:nth-child(2n) {
+  padding-top: 2rem;
+}
+
+#hero-text {
+  font-size: 30px;
+}
+
+form {
+  padding-top: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+.form-item {
+  display: flex;
+  flex-direction: column;
+}
+input {
+  max-width: 300px;
 }
