--- a/index.css
+++ b/index.css
@@ -21,11 +21,12 @@ html {
   flex: 2;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 #hero-text,
 #form-container,
-#button-container {
+#login {
   flex: 1;
   margin: 0 10rem 5rem 3rem;
 }
@@ -55,4 +56,23 @@ form {
 }
 input {
   max-width: 300px;
+  padding: 5px;
+  border-radius: 10px;
+  border: solid 1px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+button {
+  background-color: #ce9e6e;
+  border-radius: 10px;
+  border: solid 1px;
+  font-size: 16px;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+}
+#button-container {
+  padding-top: 1rem;
+}
+
+a {
+  color: #ce9e6e;
+  text-decoration: none;
 }
